docs/global_style.css
:root {
    --bg-color-primary: #F9AF0D;
    --bg-color-secondary: #F9AF0D;
    --fg-color-primary: #FFFFFF;
    --fg-color-secondary: #FFFFFF;
    --border-color-primary: #00000000;
    --shadow-color: #F7B00680;
    --hover-bg-color: #FEE0AC;
    --active-bg-color: var(--bg-color-primary);
    --disabled-bg-color: #44444410;
    --disabled-fg-color: grey;
    --disabled-border-color: var(--disabled-bg-color);
    --tooltip-max-width: 500px;
    --tooltip-bg-color: black;
    --tooltip-fg-color: white;
    --tooltip-opacity: 0.8;
    --bg-opacity: 15%;
    --tile-bg-color: var(--bg-color-primary);
    --tile-caption-color: var(--fg-color-primary);
    --tile-bg-opacity: var(--bg-opacity);

    --message-block-body-bg-color: #EEEEEE;
    --message-block-body-fg-color: #000000;
    --separator-color: #00000020;
    --message-block-radius: 40px;
}

@media screen and (min-width: 1000px) {
     :root {
        --tooltip-max-width: 800px;
    }
}

.hidden {
    display: none;
}

.ag-text {
    color: var(--fg-color-primary)!important;
}

.ag-center {
    text-align: center!important;
}

.ag-btn-group {
    font-size: 0px;
    display: inline-flex;
    vertical-align: middle;
    margin: 25px;
}

.ag-btn-group .ag-btn+.ag-btn {}

.ag-btn-group .ag-btn:first-child {
    margin-left: 0;
}

.ag-btn-group .ag-btn:last-child {
    margin-left: 0;
}

.ag-btn-group .ag-btn:not(:last-child) {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    padding-right: 15px;
}

.ag-btn-group .ag-btn:not(:first-child) {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    padding-left: 15px;
}

.ag-btn-round {
    border-radius: 100px;
    padding: 0.5rem 1.25rem;
}

.ag-btn.ag-btn-padded {
    margin: 1rem;
}

.ag-btn .ag-btn {
    padding: 0;
}

.ag-btn {
    text-transform: uppercase;
    color: var(--fg-color-primary);
    font-size: 1rem;
    line-height: 30px;
    letter-spacing: 2.05px;
    font-size: 18px;
    font-weight: 500;
    display: inline-block;
    margin: 0 auto;
    font-family: inherit;
    overflow: visible;
    border-width: 1px;
    border-style: solid;
    border-color: var(--border-color-primary);
    border-radius: 100px;
    white-space: normal;
    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
    align-items: flex-start;
    flex: 0 1 auto;
    text-align: center;
}

.ag-btn.disabled,
.ag-btn:disabled,
a.ag-btn.disabled,
a.ag-btn:disabled {
    background-color: var(--disabled-bg-color);
    color: var(--disabled-fg-color);
}

.ag-btn:not(:disabled):not(.disabled) {
    background-color: var(--bg-color-primary);
    color: var(--fg-color-primary);
    border-color: var(--border-color-primary);
}

.ag-btn:not(:disabled):not(.disabled):hover {
    opacity: 0.8;
}

.ag-btn:not(:disabled):not(.disabled).active,
.ag-btn:not(:disabled):not(.disabled):active {
    /* Swap colors to highlight */
    background-color: var(--fg-color-primary);
    color: var(--bg-color-primary);
}

.ag-btn:not(:disabled):not(.disabled):active:focus {}

.ag-embed-responsive {
    position: relative;
    padding-top: 56.25%;
    overflow: hidden;
}

.ag-embed-responsive-item {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border: 0;
    padding: 0% 5%;
}

.message-block {
    text-align: center;
    margin: 30px 0;
}

.message-block h3,
.message-block p {
    letter-spacing: -1px;
    margin: 0;
}

.message-block h3 {
    font-size: 24px;
}


/* Tooltip container */

.ag-tooltip {
    position: relative;
    display: inline-block;
}


/* Tooltip text */

.ag-tooltip .ag-tooltip-text {
    visibility: hidden;
    max-width: var(--tooltip-max-width);
    background-color: var(--tooltip-bg-color);
    color: var(--tooltip-fg-color);
    opacity: var(--tooltip-opacity);
    text-align: center;
    border-radius: 6px;
    position: absolute;
    z-index: 1;
}


/* Horizontally-oriented tooltips */

.ag-tooltip.ag-tooltip-right,
.ag-tooltip.ag-tooltip-left {
    width: max-content;
}


/* Vertically-oriented tooltips */

.ag-tooltip.ag-tooltip-top,
.ag-tooltip.ag-tooltip-bottom {
    width: 100%;
}


/* Tooltip text in a horizontally-oriented tooltip */

.ag-tooltip-left .ag-tooltip-text,
.ag-tooltip-right .ag-tooltip-text {
    width: max-content;
    padding: 0 20px;
}


/* Tooltip text in a horizontally-oriented tooltip */

.ag-tooltip-top .ag-tooltip-text,
.ag-tooltip-bottom .ag-tooltip-text {
    width: 50%;
    padding: 5px 0;
}


/* Tooltip text in a left tooltip */

.ag-tooltip-left .ag-tooltip-text {
    top: -5px;
    right: 105%;
}


/* Tooltip text in a right tooltip */

.ag-tooltip-right .ag-tooltip-text {
    top: -5px;
    left: 105%;
}


/* Tooltip text in a top tooltip */

.ag-tooltip-top .ag-tooltip-text {
    bottom: 100%;
    left: 50%;
    margin-left: -25%;
}


/* Tooltip text in a bottom tooltip */

.ag-tooltip-bottom .ag-tooltip-text {
    top: 100%;
    left: 50%;
    margin-left: -25%;
}


/* Show the tooltip text when you mouse over the tooltip container */

.ag-tooltip:hover .ag-tooltip-text {
    visibility: visible;
}

.ag-tooltip-text .ag-text {
    color: var(--fg-color-primary)!important;
}

.ag-tooltip-text * {
    margin-block-start: 0.25em;
    margin-block-end: 0.25em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
}

.ag-separator {
    height: 1px;
    width: 100%;
    padding-left: 25%;
    padding-right: 25%;
    background-color: var(--separator-color);
}

.ag-transparent {
    background-color: transparent !important;
}

.ag-message-block {
    position: relative;
    width: 100%;
    vertical-align: middle;
    margin: 0 auto;
    margin-top: 75px;
    margin-bottom: 75px;
    padding-top: 75px;
    padding-bottom: 75px;
    box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.2);
    border-radius: var(--message-block-radius);
    background-color: rgba(255, 255, 255, 0.5);
}

.ag-message-block * {
    letter-spacing: -1px;
}

.ag-message-block-overlay {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 2;
    width:100%;
    height:100%;
    border-radius: var(--message-block-radius);

}

.ag-message-block-background {
    position: absolute;
    top: 0;
    left: 0;
    z-index: -1;
    width: 100%;
    height: 100%;
    border-radius: var(--message-block-radius);
    background-size: fill;
    background-repeat: no-repeat;
    /* background-color: black; */
}

.ag-message-block-header {
    background-color: var(--bg-color-primary);
    opacity: 85%;
    display: inline-block;
    width: 100%;
    padding: 1rem 1rem;
}

.ag-message-block-header * {
    text-transform: uppercase;
    color: var(--fg-color-primary);
}

.ag-message-block-title {
    font-size: 24px;
    text-align: left;
    width: 100%;
}

.ag-message-block-date {
    font-size: 16px;
    text-align: left;  
}

.ag-message-block-body {
    background-color: var(--message-block-body-bg-color);
    opacity: 85%;
    margin: 75px;
    margin-bottom: 0;
    color: var(--message-block-body-fg-color);
    padding: 2rem;
    border-radius: 0;
}

.ag-message-block-body .ag-separator {
    margin-top: 1rem;
    margin-bottom: 1rem;
}

.ag-message-block-description {
    margin-bottom: 1rem;
}

.ag-message-block-footer
{
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
}

.ag-message-block-btn-group .ag-btn:not(:disabled):not(.disabled) {
}

.ag-message-block-btn-group {
    
}

.ag-message-block-btn-group {
    display: flex;
    align-items: center;
    justify-content: center;;
    margin: 0 auto;
    display:none;
}

.ag-message-block-btn-group .ag-btn {
    width: 200px;
}

@media screen and (max-width: 700px){
    .ag-message-block-btn-group {
        display: block;
        margin: 0 auto;
    }

    .ag-message-block-btn-group .ag-btn {
        margin: 0 auto;
    }
}

/* .ag-message-block-btn-group .ag-btn:not(:disabled) {
    background-color: var(--message-block-body-bg-color);
    color: var(--message-block-body-fg-color);
} */

.ag-message-block-btn-group .ag-btn:not(:last-child) {
    /* border-top-right-radius: 0;
    border-bottom-right-radius: 0; */
    /* padding-right: 15px; */
}

.ag-message-block-btn-group .ag-btn:not(:first-child) {
    /* border-top-left-radius: 0;
    border-bottom-left-radius: 0; */
    /* padding-left: 15px; */
}
.ag-message-block-btn-group .ag-btn:first-child {
}

.ag-message-block-btn-group .ag-btn:last-child {
}

#ag-message-panel {
    position: fixed;
    display: none;
    width: 400px;
    height: 100%;
    top: 0;
    left: calc(100% - 400px);
    right: 0;
    bottom: 0;
    background-color: rgba(0,0,0,0.5);
    z-index: 2;
    /* box-shadow: 0 0 25px 50px rgba(0,0,0,0.5); */
}

